--- a/build
+++ b/build
@@ -1,3 +1,3 @@
 #!/bin/bash
-packager build "Blender GLE/*" > Builds/blender-gle-$(date +%Y-%m-%d).coffee
+packager build G.UI/* "Blender GLE/*" > Builds/blender-gle-$(date +%Y-%m-%d).coffee
 coffee --print --bare Builds/blender-gle-$(date +%Y-%m-%d).coffee > Builds/blender-gle-latest.js
