Moving G.UI elements to blender-gui.

--- a/package.yml
+++ b/package.yml
@@ -13,7 +13,32 @@ copyright: ""
 authors: ""
 
 sources:
-  - "Source/Layout.coffee"
-  - "Source/Corner.coffee"
-  - "Source/Toolbar.coffee"
-  - "Source/View.coffee"
+  - "Source/Core/Core.Icon.coffee"
+  - "Source/Core/Core.IconGroup.coffee"
+  - "Source/Core/Core.Tip.coffee"
+  - "Source/Core/Core.Slider.coffee"
+  - "Source/Core/Core.Scrollbar.coffee"
+  - "Source/Core/Core.Button.coffee"
+  - "Source/Core/Core.Picker.coffee"
+  - "Source/Core/Core.Slot.coffee"
+  - "Source/Core/Core.Toggler.coffee"
+  - "Source/Core/Core.Overlay.coffee"
+  - "Source/Core/Core.Tab.coffee"
+  - "Source/Core/Core.Tabs.coffee"
+  - "Source/Core/Core.Push.coffee"
+  - "Source/Core/Core.PushGroup.coffee"
+  - "Source/Data/Data.Select.coffee"
+  - "Source/Data/Data.Text.coffee"
+  - "Source/Data/Data.Number.coffee"
+  - "Source/Data/Data.Color.coffee"
+  - "Source/Data/Data.ColorWheel.coffee"
+  - "Source/Data/Data.DateTime.coffee"
+  - "Source/Data/Data.Table.coffee"
+  - "Source/Data/Data.Unit.coffee"
+  - "Source/Data/Data.List.coffee"
+  - "Source/Dialog/Dialog.Prompt.coffee"
+  - "Source/Layout/Layout.coffee"
+  - "Source/Layout/Corner.coffee"
+  - "Source/Layout/Toolbar.coffee"
+  - "Source/Layout/View.coffee"
+  - "Source/Pickers/Pickers.coffee"
