--- a/package.yml
+++ b/package.yml
@@ -38,8 +38,12 @@ sources:
   - "Source/Data/Data.Table.coffee"
   - "Source/Data/Data.Unit.coffee"
   - "Source/Data/Data.List.coffee"
+  - "Source/Dialog/Dialog.Abstract.coffee"
   - "Source/Dialog/Dialog.Prompt.coffee"
+  - "Source/Dialog/Dialog.Alert.coffee"
+  - "Source/Dialog/Dialog.Confirm.coffee"
   - "Source/Iterable/Iterable.ListItem.coffee"
+  - "Source/Iterable/Iterable.MenuListItem.coffee"
   - "Source/Iterable/Iterable.List.coffee"
   - "Source/Layout/Layout.coffee"
   - "Source/Layout/Corner.coffee"
