--- a/package.yml
+++ b/package.yml
@@ -15,20 +15,22 @@ authors: ""
 sources:
   - "Source/Core/Core.Checkbox.coffee"
   - "Source/Core/Core.Icon.coffee"
-  - "Source/Groups/Core.IconGroup.coffee"
   - "Source/Core/Core.Tip.coffee"
   - "Source/Core/Core.Slider.coffee"
   - "Source/Core/Core.Scrollbar.coffee"
   - "Source/Buttons/Buttons.Abstract.coffee"
   - "Source/Buttons/Buttons.Key.coffee"
+  - "Source/Buttons/Buttons.Toggle.coffee"
   - "Source/Core/Core.Picker.coffee"
   - "Source/Core/Core.Slot.coffee"
   - "Source/Core/Core.Toggler.coffee"
   - "Source/Core/Core.Overlay.coffee"
   - "Source/Core/Core.Tab.coffee"
-  - "Source/Groups/Core.Tabs.coffee"
-  - "Source/Buttons/Buttons.Toggle.coffee"
-  - "Source/Groups/Core.PushGroup.coffee"
+  - "Source/Groups/Groups.Tabs.coffee"
+  - "Source/Groups/Groups.Icons.coffee"
+  - "Source/Groups/Groups.Abstract.coffee"
+  - "Source/Groups/Groups.Toggles.coffee"
+  - "Source/Groups/Groups.Lists.coffee"
   - "Source/Data/Data.Select.coffee"
   - "Source/Data/Data.Text.coffee"
   - "Source/Data/Data.Number.coffee"
