Cleanup and docs.

--- a/package.yml
+++ b/package.yml
@@ -1,47 +1,42 @@
 name: "Lattice"
 
-exports: "blender-gle.coffee"
+exports: "lattice.coffee"
 
-web: ""
+web: "lattice.gdotdesign.org"
 
-description: ""
+description: "Lattice is a UI framework / library."
 
-license: ""
+license: "MIT"
 
-copyright: ""
-
-authors: ""
+authors: "Szikszai Gusztáv"
 
 sources:
   - "Source/Extras/Element.Extras.coffee"
   - "Source/Extras/Class.Extras.coffee"
   - "Source/Lattice.coffee"
   - "Source/Core/Core.Abstract.coffee"
-  - "Source/Data/Data.Abstract.coffee"
-  - "Source/Interfaces/Interfaces.Children.coffee" 
-  - "Source/Interfaces/Interfaces.Mux.coffee" 
-  - "Source/Interfaces/Interfaces.Enabled.coffee"
-  - "Source/Interfaces/Interfaces.Draggable.coffee"
-  - "Source/Interfaces/Interfaces.Size.coffee"
-  - "Source/Interfaces/Interfaces.Controls.coffee"
   - "Source/Core/Core.Checkbox.coffee"
   - "Source/Core/Core.Icon.coffee"
   - "Source/Core/Core.Tip.coffee"
   - "Source/Core/Core.Slider.coffee"
   - "Source/Core/Core.Scrollbar.coffee"
-  - "Source/Buttons/Buttons.Abstract.coffee"
-  - "Source/Buttons/Buttons.Key.coffee"
-  - "Source/Buttons/Buttons.Toggle.coffee"
   - "Source/Core/Core.Picker.coffee"
   - "Source/Core/Core.Slot.coffee"
   - "Source/Core/Core.Toggler.coffee"
   - "Source/Core/Core.Overlay.coffee"
-  - "Source/Core/Core.Tab.coffee"
-  - "Source/Groups/Groups.Tabs.coffee"
+  - "Source/Interfaces/Interfaces.Children.coffee" 
+  - "Source/Interfaces/Interfaces.Mux.coffee" 
+  - "Source/Interfaces/Interfaces.Enabled.coffee"
+  - "Source/Interfaces/Interfaces.Size.coffee"
+  - "Source/Interfaces/Interfaces.Controls.coffee"
+  - "Source/Buttons/Buttons.Abstract.coffee"
+  - "Source/Buttons/Buttons.Key.coffee"
+  - "Source/Buttons/Buttons.Toggle.coffee"
   - "Source/Groups/Groups.Icons.coffee"
   - "Source/Groups/Groups.Abstract.coffee"
   - "Source/Groups/Groups.Toggles.coffee"
   - "Source/Groups/Groups.Lists.coffee"
+  - "Source/Data/Data.Abstract.coffee"
   - "Source/Data/Data.Select.coffee"
   - "Source/Data/Data.Text.coffee"
   - "Source/Data/Data.Number.coffee"
@@ -50,7 +45,6 @@ sources:
   - "Source/Data/Data.DateTime.coffee"
   - "Source/Data/Data.Table.coffee"
   - "Source/Data/Data.Unit.coffee"
-  - "Source/Data/Data.List.coffee"
   - "Source/Dialog/Dialog.Abstract.coffee"
   - "Source/Dialog/Dialog.Prompt.coffee"
   - "Source/Dialog/Dialog.Alert.coffee"
